--- a/04 WebBosch/index.html
+++ b/04 WebBosch/index.html
@@ -8,11 +8,16 @@
 </head>
 <body>
     <header class = "header">
-        <img src="file:///C:/Users/Aluno/WebApplicationSENAI/04/logo.png" alt="logo" width="200">
+        <img src="logo.png" alt="logo" width="200">
     </header>
+    <div class="background">
+        <img src="bosch-background.jpg" alt="background" width="500
+        ">
+    </div>
     <div class="content">
         <input class="input" type="text" name = "search" placeholder = "Search">
     </div>
+
     <div class="img">
         <img src="" alt="">
     </div>
