functions, arrow, array, obj

--- a/05. JavaScript/index.html
+++ b/05. JavaScript/index.html
@@ -9,9 +9,12 @@
         <script>
             const name = "Anna";
             const age = 18;
+
+            // array
             let arr = [];
             let girls = ["Guerra", 18, true];
-
+            
+            // objects
             const obj = {
                 name: "Anna", 
                 age: 18,
@@ -23,9 +26,11 @@
                     Boyfriend: "Leoleo"
                 }
             };
+            // common function
             function sum(x,y){
                 return x + y;
             }
+            // arrow function
             const sumArrow = (a,b) => a + b;
 
             console.log("My bf's name is " + obj.family.Boyfriend); 
@@ -34,7 +39,7 @@
             console.log("My name is " + name + " and I'm " + age + " years old" );
             console.log("A soma de 2 + 2 = " + sum(2,2));
             console.log("A soma de 3 + 3 = " + sumArrow(3,3));
-            
+
         </script>
     </body>
 </html>
