button, input etc

--- a/05. JavaScript/index.html
+++ b/05. JavaScript/index.html
@@ -6,40 +6,9 @@
     <title>Document</title>
 </head>
     <body>
-        <script>
-            const name = "Anna";
-            const age = 18;
-
-            // array
-            let arr = [];
-            let girls = ["Guerra", 18, true];
-            
-            // objects
-            const obj = {
-                name: "Anna", 
-                age: 18,
-                Work: "Bosch",
-                family:{
-                    Father: "Marcio",
-                    Mother: "Jane",
-                    Brother: "Victor",
-                    Boyfriend: "Leoleo"
-                }
-            };
-            // common function
-            function sum(x,y){
-                return x + y;
-            }
-            // arrow function
-            const sumArrow = (a,b) => a + b;
-
-            console.log("My bf's name is " + obj.family.Boyfriend); 
-            console.log(obj.Work);
-            console.log(girls[0]);
-            console.log("My name is " + name + " and I'm " + age + " years old" );
-            console.log("A soma de 2 + 2 = " + sum(2,2));
-            console.log("A soma de 3 + 3 = " + sumArrow(3,3));
-
-        </script>
+        <h1 id="element1">te amo guerra sz</h1>
+        <input type="text" name="teste" id="input">
+        <button type="button" id="send">Enviar</button>
+        <script src = "script.js"></script>
     </body>
 </html>
