--- a/05. JavaScript/index.html
+++ b/05. JavaScript/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=scr, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
     <body>
         <h1 id="element1">te amo guerra sz</h1>
         <input type="text" name="teste" id="input">
-        <button type="button" id="send">Enviar</button>
+        <button type="button" onclick="receiveText" id="send">Send</button>
         <script src = "script.js"></script>
     </body>
 </html>
