--- a/05. JavaScript/index.html
+++ b/05. JavaScript/index.html
@@ -7,9 +7,17 @@
     <title>Document</title>
 </head>
     <body>
-        <h1 id="element1">te amo guerra sz</h1>
-        <input type="text" name="teste" id="input">
-        <button type="button" onclick="receiveText" id="send">Send</button>
-        <script src = "script.js"></script>
+        <center>
+            <h1 id="element1">te amo guerra sz</h1>
+            <input type="color" name="teste" id="input">
+            <button type="button" onclick="receiveText()" id="send">Send</button>
+            <script src = "script.js"></script>
+            <br>
+            <br>
+            <div class = "circle ok" id = 'circle1' onclick="changecolor()"></div>
+            <br>
+            <script src="script.js"></script>
+        </center>
+        
     </body>
 </html>
