color, you still must to change de color as you change the input

--- a/05. JavaScript/index.html
+++ b/05. JavaScript/index.html
@@ -10,11 +10,9 @@
         <center>
             <h1 id="element1">te amo guerra sz</h1>
             <input type="color" name="teste" id="input">
-            <button type="button" onclick="receiveText()" id="send">Send</button>
-            <script src = "script.js"></script>
+            <button type="button" onclick="changecolor()" id="send">Change Color</button> <!-- change color button -->
             <br>
-            <br>
-            <div class = "circle ok" id = 'circle1' onclick="changecolor()"></div>
+            <div class = "circle ok" id = 'circle1' onclick="changecolor()"></div> <!-- circle-->
             <br>
             <script src="script.js"></script>
         </center>
