--- a/05. JavaScript/index.html
+++ b/05. JavaScript/index.html
@@ -10,7 +10,8 @@
         <center>
             <h1 id="element1">te amo guerra sz</h1>
             <input type="color" name="teste" id="input">
-            <button type="button" onclick="changecolor()" id="send">Change Color</button> <!-- change color button -->
+            <br>
+            <!-- <button type="button" onclick="changecolor()" id="send">Change Color</button> change color button -->
             <br>
             <div class = "circle ok" id = 'circle1' onclick="changecolor()"></div> <!-- circle-->
             <br>
