check task done

--- a/04 WebBosch/index.html
+++ b/04 WebBosch/index.html
@@ -40,7 +40,7 @@
 
         <ul 
             id="tasklist">
-            <button type="button" onclick="" id="checkbutton" class = "checkbutton">✔</button>
+            <!-- <button type="button" onclick="" id="checkbutton" class = "checkbutton">✔</button> -->
         </ul>
 
     </main>
